Redirect to quote list and print option on review page

--- a/quoteform/templates/quoteform/quotedetail.html
+++ b/quoteform/templates/quoteform/quotedetail.html
@@ -47,6 +47,7 @@
                     </tr>
                 </tbody>
             </table>
+            <a style="text-decoration: none; color: white;" href="{% url 'renderpdf' pk=quote.pk %}"><button class="btn btn-success">Render PDF</button></a>
         </div>
     </div>
 </div>
