Updated detail page

--- a/quoteform/templates/quoteform/quotedetail.html
+++ b/quoteform/templates/quoteform/quotedetail.html
@@ -18,6 +18,14 @@
                         <td>{{quote.whatsapp}}</td>
                     </tr>
                     <tr>
+                        <th>Customer Location</th>
+                        <td>{{quote.location}}</td>
+                    </tr>
+                    <tr>
+                        <th>Customer Email</th>
+                        <td>{{quote.email}}</td>
+                    </tr>
+                    <tr>
                         <th>Capacity (in kW)</th>
                         <td>{{quote.capacity}}</td>
                     </tr>
