--- a/quoteform/templates/quoteform/quotelist.html
+++ b/quoteform/templates/quoteform/quotelist.html
@@ -14,7 +14,7 @@
             <table class="table align-middle">
                 <tbody>
                     <tr>
-                        <th>Quotation Number</th>
+                        <th>Quotation Number (Click for Details)</th>
                         <th>Client Name</th>
                         <th>Date Created</th>
                         <th></th>
