Integrated Customer Complaint Form

--- a/quoteform/templates/quoteform/navbar.html
+++ b/quoteform/templates/quoteform/navbar.html
@@ -19,6 +19,9 @@
           <li class="nav-item active" style="text-align: center; font-family: 'Ubuntu', sans-serif; font-size: 20px; text-align: center; color: #ffffff;">
             <a class="nav-link" href="{% url 'quotelist' %}">Quote List</a>
           </li>
+          <li class="nav-item active" style="text-align: center; font-family: 'Ubuntu', sans-serif; font-size: 20px; text-align: center; color: #ffffff;">
+            <a class="nav-link" href="{% url 'showcsv' %}">Complaints</a>
+          </li>
         </ul>
     </div>
     <span class="hello-msg">Hello, {{request.user}}!</span>
