--- a/quoteform/templates/quoteform/base.html
+++ b/quoteform/templates/quoteform/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <title>Imagine PowerTree Quotation Generator!</title>
-        <link rel="shortcut icon" type="image/png" href="{% static '/images/favicon.ico' %}"/>
+        <link rel="icon" type="image/x-icon" href="https://powertree.co.in/o/powertree-public-theme/images/favicon.ico?v2">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
