Fixed file deletion code and added edit details option'

--- a/quoteform/templates/quoteform/quotedetail.html
+++ b/quoteform/templates/quoteform/quotedetail.html
@@ -56,6 +56,7 @@
                 </tbody>
             </table>
             <a style="text-decoration: none; color: white;" href="{% url 'renderpdf' pk=quote.pk %}"><button class="btn btn-success">Render PDF</button></a>
+            <a style="text-decoration: none; color: white;" href="{% url 'updatequote' pk=quote.pk %}"><button class="btn btn-success">Edit Details</button></a>
         </div>
     </div>
 </div>
