--- a/quoteform/templates/quoteform/quotelist.html
+++ b/quoteform/templates/quoteform/quotelist.html
@@ -18,6 +18,8 @@
                         <th>Client Name</th>
                         <th>Date Created</th>
                         <th></th>
+                        <th></th>
+                        <th></th>
                     </tr>
                     {% for quote in quotes %}
                     <tr>
@@ -25,6 +27,8 @@
                         <td>{{quote.name}}</td>
                         <td>{{quote.created_date}}</td>
                         <td><a style="text-decoration: none; color: white;" href="{% url 'renderpdf' pk=quote.pk %}"><button class="btn btn-success">Render PDF</button></a></td>
+                        <td><a style="text-decoration: none; color: white;" href="{% url 'updatequote' pk=quote.pk %}"><button class="btn btn-warning">Edit Details</button></a></td>
+                        <td><a style="text-decoration: none; color: white;" href="{% url 'removequote' pk=quote.pk %}"><button class="btn btn-danger">Remove Quote</button></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
