--- a/quoteform/templates/quoteform/removequote.html
+++ b/quoteform/templates/quoteform/removequote.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
             
                 <a class="btn btn-sm btn-warning" href="{% url 'quotelist' %}">Cancel</a>
-                <input class="btn btn-sm btn-danger" type="submit" name="Confirm">
+                <input class="btn btn-sm btn-danger" type="submit" name="Confirm" value="Confirm">
             </form>
 
         </div>
